--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+	<button class="reload">Спочатку</button>
+	<h1 class="title">Знайдено пар: <span>0</span></h1>
 	<div class="cards">
 		<div class="card" data-value="accordion">
 			<img class="card__front-face" src="images/instruments/accordion.png" alt="accordion">
